Error Page udated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         body {
             background-color: lightgoldenrodyellow;
             font-family: 'Merriweather Sans', sans-serif;
-            ;
         }
         
         .error_wrapper {
@@ -27,7 +26,7 @@
             margin-bottom: 42px;
         }
         
-        .img {
+        img {
             width: 50%;
         }
     </style>
